2009-09-06 23:55-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/Gorm.gorm
	* GormCore/GormGenericEditor.h
	* GormCore/GormViewWithContentViewEditor.h
	* GormCore/GormViewWithContentViewEditor.m
	* Gorm.m: Beginning of implementation of groupSelectionInView:

2009-08-22 18:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormOutlineView.m: Remove .tiff from the end of the images.
	This is interfering with theming in gorm since it's not pulling the
	right images in this case.
	* Plugins/Nib/GormNibCustomResource.[hm]: Handle custom resources
	in gorm, currently just images/sounds.
	* Plugins/Nib/GormNibWrapperLoader.h: Include nib resource header

2009-08-10 10:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDefines.h: Move defines for certain things here
	so that they are centralized.

2009-08-08 03:09-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GNUmakefile: Added reference to new classes.
	* GormCore/GormBoxEditor.m: Cleanup.
	* GormCore/GormClassManager.m: Correction for when loading from a
	nib and there are no custom classes in the nib file.
	* GormCore/GormDocumentWindow.m: Added awakeFromNib to accept
	mouse moved events.
	* GormCore/GormInternalViewEditor.m: Cleanup.
	* GormCore/GormStandaloneViewEditor.[hm]: Addition of new class.
	* GormCore/GormViewWithContentViewEditor.[hm]: Removal of
	handleMouseOnKnob:ofView:withEvent:,
	handleMouseOnView:withEvent: methods
	* GormCore/GormViewWithSubviewsEditor.[hm]: Addition of
	handleMouseOnKnob:ofView:withEvent:,
	handleMouseOnView:withEvent: methods
	* Palettes/0Menus/GormNSMenu.m: Cleanup.

2009-07-25 18:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GNUmakefile
	* GormCore/GormBoxEditor.m
	* GormCore/GormDocumentWindow.m
	* GormCore/GormInternalViewEditor.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormStandaloneViewEditor.[hm]: New classes to handle
	standalone views.