@@ -1,3 +1,10 @@
+2009-09-22 16:59-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* GormCore/GormViewWithSubviewsEditor.m: Call super instead of
+	parent.  Corrects issue with connecting to NSBox and 
+	NSProgressIndicator.
+	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>
+
 2009-09-06 23:55-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* English.lproj/Gorm.gorm
